--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 title: Sonchaux AWT 2018 Finals
 subtitle: Live Scoring
 email: jerome@loyet.net
-description: Live Scoring for Aerobatics World Tour 2018 Finals at Sonchaux AcroShow
+description: Live Scoring for Aerobatics World Tour 2018
 author: Jérôme LOYET
 logo: assets/images/logo_for_dark.png
 social:
